--- a/RITNextBus_WebUI/source/index.html.erb
+++ b/RITNextBus_WebUI/source/index.html.erb
@@ -1,10 +1,8 @@
 ---
-title: Welcome to Middleman
+title: RITNextBus WebUI
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<div id="container" class="center">
+  <h1>RITNextBus WebUI</h1>
+</div><!-- container -->
+
