--- a/RITNextBus_WebUI/source/layouts/layout.erb
+++ b/RITNextBus_WebUI/source/layouts/layout.erb
@@ -11,9 +11,11 @@
     
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
+    <%= javascript_include_tag  "https://code.jquery.com/jquery-2.1.1.min.js" %>
   </head>
   
   <body class="<%= page_classes %>">
     <%= yield %>
   </body>
 </html>
+
