Updated basis of generation of content, and readied page for some testing

--- a/RITNextBus_WebUI/source/index.html.erb
+++ b/RITNextBus_WebUI/source/index.html.erb
@@ -3,6 +3,8 @@ title: RITNextBus WebUI
 ---
 
 <div id="container" class="center">
-  <h1>RITNextBus WebUI</h1>
+    <h1>RITNextBus WebUI</h1>
+    <ul id="province">
+    </ul>
 </div><!-- container -->
 
