Basis of functionality for generating the next time. Currently only one route.

--- a/RITNextBus_WebUI/source/index.html.erb
+++ b/RITNextBus_WebUI/source/index.html.erb
@@ -4,7 +4,6 @@ title: RITNextBus WebUI
 
 <div id="container" class="center">
     <h1>RITNextBus WebUI</h1>
-    <ul id="province">
-    </ul>
+    <h3>To Province:</h3>
+    <div id="toProvince"></div>
 </div><!-- container -->
-
