Updated js for to and from province counters

--- a/RITNextBus_WebUI/source/index.html.erb
+++ b/RITNextBus_WebUI/source/index.html.erb
@@ -6,4 +6,6 @@ title: RITNextBus WebUI
     <h1>RITNextBus WebUI</h1>
     <h3>To Province:</h3>
     <div id="toProvince"></div>
+    <h3>From Province:</h3>
+    <div id="fromProvince"></div>
 </div><!-- container -->
